# core

./: Cargo.toml  README.md  flake.nix
actions/cli/: Cargo.toml
actions/cli/src/: lib.rs
actions/editor/: Cargo.toml
actions/editor/src/: lib.rs
core-lang/: Cargo.toml
core-lang/src/: ast.rs  evaluator.rs  lib.rs  parser.rs  sexpr.pest  token.rs
core-lang/tests/: semantic.rs  syntax.rs
core-lang/tests/syntax-files/: define-syntax.txt  define.txt  lambda.txt
src/: main.rs
