[package]
name = "core"
authors = ["haruki7049 <tontonkirikiri@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/haruki7049/core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "3"
package.version = "0.1.0-dev"
members = ["actions/cli", "core-lang"]

[dependencies]
directories = "6.0.0"
core-lang = { path = "core-lang" }
core-cli = { path = "actions/cli" }
